[gd_scene load_steps=12 format=3 uid="uid://cf6v66ilvyovd"]

[ext_resource type="Script" uid="uid://bo46xcisisakq" path="res://scripts/level.gd" id="1_tw77e"]
[ext_resource type="PackedScene" uid="uid://gokyouu26dua" path="res://scene/anvil.tscn" id="2_3flxk"]
[ext_resource type="PackedScene" uid="uid://bogyc6f8t1l3n" path="res://scene/glass_block.tscn" id="3_xesoj"]
[ext_resource type="PackedScene" uid="uid://dof0ieoia08j4" path="res://scene/dirt_block.tscn" id="4_70cbr"]
[ext_resource type="PackedScene" uid="uid://dpexhmxaas4kw" path="res://scene/block_wood.tscn" id="5_lsoxn"]
[ext_resource type="PackedScene" uid="uid://c0gd2tyeyrgp" path="res://scene/stone_block.tscn" id="6_x17xt"]
[ext_resource type="PackedScene" uid="uid://c1n6c2kukciua" path="res://scene/target.tscn" id="7_lsoxn"]
[ext_resource type="Texture2D" uid="uid://cevw07uk64g7p" path="res://assets/simpleShapes/Star 2.png" id="8_c1764"]
[ext_resource type="Texture2D" uid="uid://b1kkbm5e6m82m" path="res://assets/openGameArt/target.png" id="9_ri5j0"]
[ext_resource type="Texture2D" uid="uid://dasfv11rsar11" path="res://assets/openGameArt/material_tileset.png" id="10_1gcq6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a2j0k"]
atlas = ExtResource("10_1gcq6")
region = Rect2(0, 0, 16, 16)

[node name="level_1" type="Node2D"]
script = ExtResource("1_tw77e")

[node name="blocks" type="Node2D" parent="."]

[node name="dirt_block" parent="blocks" instance=ExtResource("4_70cbr")]
position = Vector2(48, 272)

[node name="dirt_block2" parent="blocks" instance=ExtResource("4_70cbr")]
position = Vector2(80, 272)

[node name="dirt_block3" parent="blocks" instance=ExtResource("4_70cbr")]
position = Vector2(112, 272)

[node name="dirt_block4" parent="blocks" instance=ExtResource("4_70cbr")]
position = Vector2(144, 272)

[node name="block_wood" parent="blocks" instance=ExtResource("5_lsoxn")]
position = Vector2(176, 272)

[node name="block_wood2" parent="blocks" instance=ExtResource("5_lsoxn")]
position = Vector2(208, 272)

[node name="block_wood3" parent="blocks" instance=ExtResource("5_lsoxn")]
position = Vector2(240, 272)

[node name="block_wood4" parent="blocks" instance=ExtResource("5_lsoxn")]
position = Vector2(272, 272)

[node name="stone_block" parent="blocks" instance=ExtResource("6_x17xt")]
position = Vector2(368, 272)

[node name="stone_block2" parent="blocks" instance=ExtResource("6_x17xt")]
position = Vector2(144, 16)

[node name="stone_block3" parent="blocks" instance=ExtResource("6_x17xt")]
position = Vector2(336, 272)

[node name="stone_block4" parent="blocks" instance=ExtResource("6_x17xt")]
position = Vector2(304, 272)

[node name="anvil" parent="." instance=ExtResource("2_3flxk")]
position = Vector2(48, 48)

[node name="starting_area" type="Node2D" parent="."]

[node name="glass_block" parent="starting_area" instance=ExtResource("3_xesoj")]
position = Vector2(176, 144)

[node name="glass_block2" parent="starting_area" instance=ExtResource("3_xesoj")]
position = Vector2(176, 112)

[node name="glass_block3" parent="starting_area" instance=ExtResource("3_xesoj")]
position = Vector2(48, 80)

[node name="glass_block4" parent="starting_area" instance=ExtResource("3_xesoj")]
position = Vector2(80, 80)

[node name="glass_block5" parent="starting_area" instance=ExtResource("3_xesoj")]
position = Vector2(80, 112)

[node name="glass_block6" parent="starting_area" instance=ExtResource("3_xesoj")]
position = Vector2(112, 112)

[node name="glass_block7" parent="starting_area" instance=ExtResource("3_xesoj")]
position = Vector2(112, 144)

[node name="glass_block8" parent="starting_area" instance=ExtResource("3_xesoj")]
position = Vector2(112, 176)

[node name="glass_block9" parent="starting_area" instance=ExtResource("3_xesoj")]
position = Vector2(144, 176)

[node name="glass_block10" parent="starting_area" instance=ExtResource("3_xesoj")]
position = Vector2(176, 176)

[node name="target" parent="starting_area" instance=ExtResource("7_lsoxn")]
position = Vector2(16, 48)

[node name="target2" parent="starting_area" instance=ExtResource("7_lsoxn")]
position = Vector2(112, 80)

[node name="target3" parent="starting_area" instance=ExtResource("7_lsoxn")]
position = Vector2(144, 144)

[node name="ui" type="PanelContainer" parent="."]
offset_top = 512.0
offset_right = 640.0
offset_bottom = 640.0

[node name="MarginContainer" type="MarginContainer" parent="ui"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer2" type="HBoxContainer" parent="ui/MarginContainer"]
layout_mode = 2

[node name="left" type="HBoxContainer" parent="ui/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="starcontainer1" type="VBoxContainer" parent="ui/MarginContainer/HBoxContainer2/left"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="ui/MarginContainer/HBoxContainer2/left/starcontainer1"]
layout_mode = 2

[node name="star1" type="TextureRect" parent="ui/MarginContainer/HBoxContainer2/left/starcontainer1/CenterContainer"]
unique_name_in_owner = true
modulate = Color(0.501961, 0.501961, 0.501961, 0.501961)
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("8_c1764")
expand_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ui/MarginContainer/HBoxContainer2/left/starcontainer1"]
layout_mode = 2

[node name="Label" type="Label" parent="ui/MarginContainer/HBoxContainer2/left/starcontainer1/HBoxContainer"]
layout_mode = 2
text = "50%"
horizontal_alignment = 1

[node name="target_icon" type="TextureRect" parent="ui/MarginContainer/HBoxContainer2/left/starcontainer1/HBoxContainer"]
layout_mode = 2
texture = ExtResource("9_ri5j0")
expand_mode = 3

[node name="starcontainer2" type="VBoxContainer" parent="ui/MarginContainer/HBoxContainer2/left"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="ui/MarginContainer/HBoxContainer2/left/starcontainer2"]
layout_mode = 2

[node name="star2" type="TextureRect" parent="ui/MarginContainer/HBoxContainer2/left/starcontainer2/CenterContainer"]
unique_name_in_owner = true
modulate = Color(0.501961, 0.501961, 0.501961, 0.501961)
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("8_c1764")
expand_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ui/MarginContainer/HBoxContainer2/left/starcontainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="ui/MarginContainer/HBoxContainer2/left/starcontainer2/HBoxContainer"]
layout_mode = 2
text = "100%"
horizontal_alignment = 1

[node name="target_icon" type="TextureRect" parent="ui/MarginContainer/HBoxContainer2/left/starcontainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("9_ri5j0")
expand_mode = 3

[node name="starcontainer3" type="VBoxContainer" parent="ui/MarginContainer/HBoxContainer2/left"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="ui/MarginContainer/HBoxContainer2/left/starcontainer3"]
layout_mode = 2

[node name="star3" type="TextureRect" parent="ui/MarginContainer/HBoxContainer2/left/starcontainer3/CenterContainer"]
unique_name_in_owner = true
modulate = Color(0.501961, 0.501961, 0.501961, 0.501961)
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("8_c1764")
expand_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ui/MarginContainer/HBoxContainer2/left/starcontainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="ui/MarginContainer/HBoxContainer2/left/starcontainer3/HBoxContainer"]
layout_mode = 2
text = "100%"
horizontal_alignment = 1

[node name="target_icon" type="TextureRect" parent="ui/MarginContainer/HBoxContainer2/left/starcontainer3/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_a2j0k")
expand_mode = 3

[node name="right" type="HBoxContainer" parent="ui/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10

[node name="debug" type="CheckBox" parent="ui/MarginContainer/HBoxContainer2/right"]
unique_name_in_owner = true
layout_mode = 2
text = "debug"

[node name="PanelContainer" type="PanelContainer" parent="ui/MarginContainer/HBoxContainer2/right"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ui/MarginContainer/HBoxContainer2/right/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="ui/MarginContainer/HBoxContainer2/right/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="volume" type="HSlider" parent="ui/MarginContainer/HBoxContainer2/right/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
max_value = 1.0
step = 0.25
value = 0.5
scrollable = false
tick_count = 5
ticks_on_borders = true

[node name="restart" type="Button" parent="ui/MarginContainer/HBoxContainer2/right"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Restart"

[connection signal="pressed" from="ui/MarginContainer/HBoxContainer2/right/restart" to="." method="_restart"]
